manual-export/applications/netdata/api-deployment-raw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "39"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"netdata-minimal-api","namespace":"netdata"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"netdata-minimal-api"}},"template":{"metadata":{"labels":{"app":"netdata-minimal-api"}},"spec":{"containers":[{"image":"nginx:alpine","name":"nginx","ports":[{"containerPort":80}],"volumeMounts":[{"mountPath":"/etc/nginx/conf.d/default.conf","name":"nginx-config","subPath":"default.conf"},{"mountPath":"/usr/share/ [...]
  creationTimestamp: "2025-09-01T13:53:07Z"
  generation: 39
  name: netdata-minimal-api
  namespace: netdata
  resourceVersion: "3048627"
  uid: 3f9afbe3-162d-4bac-9a6a-9b96c6121356
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: netdata-minimal-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-09-10T22:19:28-05:00"
      creationTimestamp: null
      labels:
        app: netdata-minimal-api
    spec:
      containers:
      - image: nginx:alpine
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-config
          subPath: default.conf
        - mountPath: /usr/share/nginx/html/metrics.html
          name: dashboard-html
          subPath: metrics.html
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: minimal-api-nginx-config
        name: nginx-config
      - configMap:
          defaultMode: 420
          name: minimal-api-dashboard
        name: dashboard-html
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-09-02T01:02:10Z"
    lastUpdateTime: "2025-09-02T01:02:10Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-09-01T13:53:07Z"
    lastUpdateTime: "2025-09-11T04:08:35Z"
    message: ReplicaSet "netdata-minimal-api-59dc8fcf45" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 39
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
