manual-export/applications/netdata/deployments-clean.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "6"
      meta.helm.sh/release-name: netdata
      meta.helm.sh/release-namespace: netdata
    creationTimestamp: "2025-08-27T16:11:22Z"
    generation: 7
    labels:
      app: netdata
      app.kubernetes.io/managed-by: Helm
      chart: netdata-3.7.145
      heritage: Helm
      release: netdata
      role: k8sState
    name: netdata-k8s-state
    namespace: netdata
    resourceVersion: "1356630"
    uid: 81486bc1-955c-44b8-8a6f-bdbf6a89766b
  spec:
    progressDeadlineSeconds: 600
    replicas: 0
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: netdata
        release: netdata
        role: k8sState
    strategy:
      type: Recreate
    template:
      metadata:
        annotations:
          checksum/config: 2af3457973690ab48d438ebb5445773add5801dc8c748d3276dafe722088df99
          container.apparmor.security.beta.kubernetes.io/netdata: unconfined
          kubectl.kubernetes.io/restartedAt: "2025-08-31T06:00:06Z"
        creationTimestamp: null
        labels:
          app: netdata
          release: netdata
          role: k8sState
      spec:
        containers:
        - env:
          - name: NETDATA_LISTENER_PORT
            value: "19999"
          image: netdata/netdata:edge
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
              - /usr/sbin/netdatacli
              - ping
            failureThreshold: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          name: netdata
          ports:
          - containerPort: 19999
            name: http
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /usr/sbin/netdatacli
              - ping
            failureThreshold: 3
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /host/etc/os-release
            name: os-release
          - mountPath: /etc/netdata/go.d.conf
            name: configmap
            subPath: go.d
          - mountPath: /etc/netdata/go.d/k8s_state.conf
            name: configmap
            subPath: go.d-k8s_state
          - mountPath: /etc/netdata/netdata.conf
            name: configmap
            subPath: netdata
          - mountPath: /etc/netdata/stream.conf
            name: configmap
            subPath: stream
          - mountPath: /var/lib/netdata
            name: varlib
        dnsPolicy: ClusterFirstWithHostNet
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          fsGroup: 201
        serviceAccount: netdata
        serviceAccountName: netdata
        terminationGracePeriodSeconds: 30
        volumes:
        - hostPath:
            path: /etc/os-release
            type: ""
          name: os-release
        - configMap:
            defaultMode: 420
            name: netdata-conf-k8s-state
            optional: true
          name: configmap
        - name: configsecret
          secret:
            defaultMode: 420
            optional: true
            secretName: netdata-conf-k8s-state
        - name: varlib
          persistentVolumeClaim:
            claimName: netdata-k8s-state-varlib
  status:
    conditions:
    - lastTransitionTime: "2025-08-30T06:00:45Z"
      lastUpdateTime: "2025-08-30T06:00:45Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-08-27T16:11:22Z"
      lastUpdateTime: "2025-08-31T06:00:06Z"
      message: ReplicaSet "netdata-k8s-state-6f6b568688" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 7
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "39"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"netdata-minimal-api","namespace":"netdata"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"netdata-minimal-api"}},"template":{"metadata":{"labels":{"app":"netdata-minimal-api"}},"spec":{"containers":[{"image":"nginx:alpine","name":"nginx","ports":[{"containerPort":80}],"volumeMounts":[{"mountPath":"/etc/nginx/conf.d/default.conf","name":"nginx-config","subPath":"default.conf"},{"mountPath":"/usr/shar [...]
    creationTimestamp: "2025-09-01T13:53:07Z"
    generation: 39
    name: netdata-minimal-api
    namespace: netdata
    resourceVersion: "3048627"
    uid: 3f9afbe3-162d-4bac-9a6a-9b96c6121356
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: netdata-minimal-api
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2025-09-10T22:19:28-05:00"
        creationTimestamp: null
        labels:
          app: netdata-minimal-api
      spec:
        containers:
        - image: nginx:alpine
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/nginx/conf.d/default.conf
            name: nginx-config
            subPath: default.conf
          - mountPath: /usr/share/nginx/html/metrics.html
            name: dashboard-html
            subPath: metrics.html
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: minimal-api-nginx-config
          name: nginx-config
        - configMap:
            defaultMode: 420
            name: minimal-api-dashboard
          name: dashboard-html
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-09-02T01:02:10Z"
      lastUpdateTime: "2025-09-02T01:02:10Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-09-01T13:53:07Z"
      lastUpdateTime: "2025-09-11T04:08:35Z"
      message: ReplicaSet "netdata-minimal-api-59dc8fcf45" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 39
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "12"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"netdata","component":"parent","release":"netdata","role":"parent"},"name":"netdata-parent-fixed","namespace":"netdata"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"netdata","component":"parent","release":"netdata","role":"parent"}},"template":{"metadata":{"labels":{"app":"netdata","component":"parent","release":"netdata","role":"parent"}},"spec":{"containers":[{"env":[{"name":"NETDATA_MOD [...]
    creationTimestamp: "2025-09-01T00:46:02Z"
    generation: 12
    labels:
      app: netdata
      component: parent
      release: netdata
      role: parent
    name: netdata-parent-fixed
    namespace: netdata
    resourceVersion: "1577252"
    uid: e8e0194b-e77a-4950-9b5f-efcfccbb8716
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: netdata
        component: parent
        release: netdata
        role: parent
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2025-08-31T21:32:20-05:00"
        creationTimestamp: null
        labels:
          app: netdata
          component: parent
          release: netdata
          role: parent
      spec:
        containers:
        - env:
          - name: NETDATA_MODE
            value: parent
          - name: NETDATA_STREAM_ENABLED
            value: "true"
          - name: NETDATA_CLAIM_TOKEN
          - name: NETDATA_CLAIM_ROOMS
          - name: NETDATA_CLAIM_URL
          image: netdata/netdata:v1.44.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/info
              port: 19999
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: netdata
          ports:
          - containerPort: 19999
            name: http
            protocol: TCP
          - containerPort: 8125
            name: statsd
            protocol: UDP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/info
              port: 19999
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
          securityContext:
            capabilities:
              add:
              - SYS_PTRACE
              drop:
              - ALL
            runAsNonRoot: false
            runAsUser: 201
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/netdata/netdata.conf
            name: netdata-config
            subPath: netdata.conf
          - mountPath: /etc/netdata/stream.conf
            name: netdata-config
            subPath: stream.conf
          - mountPath: /var/lib/netdata
            name: netdata-lib
          - mountPath: /var/cache/netdata
            name: netdata-cache
          - mountPath: /host/proc
            name: proc
            readOnly: true
          - mountPath: /host/sys
            name: sys
            readOnly: true
          - mountPath: /host/run
            name: run
            readOnly: true
          - mountPath: /var/run/docker.sock
            name: docker-sock
        dnsPolicy: ClusterFirst
        nodeSelector:
          node-role.kubernetes.io/control-plane: ""
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        volumes:
        - configMap:
            defaultMode: 420
            name: netdata-parent-config
          name: netdata-config
        - emptyDir: {}
          name: netdata-lib
        - emptyDir: {}
          name: netdata-cache
        - hostPath:
            path: /proc
            type: ""
          name: proc
        - hostPath:
            path: /sys
            type: ""
          name: sys
        - hostPath:
            path: /run
            type: ""
          name: run
        - hostPath:
            path: /var/run/docker.sock
            type: ""
          name: docker-sock
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-09-01T00:46:35Z"
      lastUpdateTime: "2025-09-01T00:46:35Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-09-01T00:46:02Z"
      lastUpdateTime: "2025-09-01T15:36:00Z"
      message: ReplicaSet "netdata-parent-fixed-65764854f6" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 12
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
