manual-export/applications/netdata/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/tls-acme":"true","meta.helm.sh/release-name":"netdata","meta.helm.sh/release-namespace":"netdata"},"name":"netdata","namespace":"netdata"},"spec":{"ingressClassName":"nginx","rules":[{"host":"netdata.k8s.local","http":{"paths":[{"backend":{"service":{"name":"netdata","port":{"number":19999}}},"path":"/","pathType":"Prefix"}]}}]}}
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: "true"
      meta.helm.sh/release-name: netdata
      meta.helm.sh/release-namespace: netdata
    creationTimestamp: "2025-08-27T16:11:22Z"
    generation: 3
    labels:
      app: netdata
      app.kubernetes.io/managed-by: Helm
      chart: netdata-3.7.145
      heritage: Helm
      release: netdata
    name: netdata
    namespace: netdata
    resourceVersion: "3189310"
    uid: 7eaa0e64-2921-489a-81aa-19d32aaa8b3d
  spec:
    ingressClassName: nginx
    rules:
    - host: netdata.k8s.local
      http:
        paths:
        - backend:
            service:
              name: netdata
              port:
                name: http
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.4.100
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx"},"name":"netdata-api","namespace":"netdata"},"spec":{"rules":[{"host":"api.catdevops.net","http":{"paths":[{"backend":{"service":{"name":"netdata-minimal-api","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}}]}}
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    creationTimestamp: "2025-08-29T13:28:30Z"
    generation: 4
    name: netdata-api
    namespace: netdata
    resourceVersion: "4247492"
    uid: 590da2e4-acbe-4794-80c8-a181f301cca6
  spec:
    ingressClassName: nginx
    rules:
    - host: api.catdevops.net
      http:
        paths:
        - backend:
            service:
              name: netdata-minimal-api
              port:
                number: 8080
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - api.catdevops.net
      secretName: api-catdevops-net-tls
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.4.100
kind: List
metadata:
  resourceVersion: ""
