manual-export/applications/netdata/parent-deployment-raw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "12"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"netdata","component":"parent","release":"netdata","role":"parent"},"name":"netdata-parent-fixed","namespace":"netdata"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"netdata","component":"parent","release":"netdata","role":"parent"}},"template":{"metadata":{"labels":{"app":"netdata","component":"parent","release":"netdata","role":"parent"}},"spec":{"containers":[{"env":[{"name":"NETDATA_MODE" [...]
  creationTimestamp: "2025-09-01T00:46:02Z"
  generation: 12
  labels:
    app: netdata
    component: parent
    release: netdata
    role: parent
  name: netdata-parent-fixed
  namespace: netdata
  resourceVersion: "1577252"
  uid: e8e0194b-e77a-4950-9b5f-efcfccbb8716
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: netdata
      component: parent
      release: netdata
      role: parent
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-08-31T21:32:20-05:00"
      creationTimestamp: null
      labels:
        app: netdata
        component: parent
        release: netdata
        role: parent
    spec:
      containers:
      - env:
        - name: NETDATA_MODE
          value: parent
        - name: NETDATA_STREAM_ENABLED
          value: "true"
        - name: NETDATA_CLAIM_TOKEN
        - name: NETDATA_CLAIM_ROOMS
        - name: NETDATA_CLAIM_URL
        image: netdata/netdata:v1.44.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/info
            port: 19999
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: netdata
        ports:
        - containerPort: 19999
          name: http
          protocol: TCP
        - containerPort: 8125
          name: statsd
          protocol: UDP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/info
            port: 19999
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 256Mi
        securityContext:
          capabilities:
            add:
            - SYS_PTRACE
            drop:
            - ALL
          runAsNonRoot: false
          runAsUser: 201
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/netdata/netdata.conf
          name: netdata-config
          subPath: netdata.conf
        - mountPath: /etc/netdata/stream.conf
          name: netdata-config
          subPath: stream.conf
        - mountPath: /var/lib/netdata
          name: netdata-lib
        - mountPath: /var/cache/netdata
          name: netdata-cache
        - mountPath: /host/proc
          name: proc
          readOnly: true
        - mountPath: /host/sys
          name: sys
          readOnly: true
        - mountPath: /host/run
          name: run
          readOnly: true
        - mountPath: /var/run/docker.sock
          name: docker-sock
      dnsPolicy: ClusterFirst
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      volumes:
      - configMap:
          defaultMode: 420
          name: netdata-parent-config
        name: netdata-config
      - emptyDir: {}
        name: netdata-lib
      - emptyDir: {}
        name: netdata-cache
      - hostPath:
          path: /proc
          type: ""
        name: proc
      - hostPath:
          path: /sys
          type: ""
        name: sys
      - hostPath:
          path: /run
          type: ""
        name: run
      - hostPath:
          path: /var/run/docker.sock
          type: ""
        name: docker-sock
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-09-01T00:46:35Z"
    lastUpdateTime: "2025-09-01T00:46:35Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-09-01T00:46:02Z"
    lastUpdateTime: "2025-09-01T15:36:00Z"
    message: ReplicaSet "netdata-parent-fixed-65764854f6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 12
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
